--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon backend/server.js",
 		"start": "cross-env NODE_ENV=production nodemon backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"update-users": "node backend/scripts/updateUsers.js"
 	},
+
 	"keywords": [],
 	"author": "",
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.3",
 		"cloudinary": "^2.1.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.3.1"
+		"mongoose": "^8.3.1",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.10.0",
+		"resend": "^4.1.2",
+		"stripe": "^17.6.0"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
